trying linux cross compile again

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -46,19 +46,12 @@ jobs:
           #  target: aarch64-unknown-linux-gnu
           #  compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
           #  build: x86_64-unknown-linux-gnu
-
-       #   - os: ubuntu-latest
-       #     name: linux_aarch64
-       #     target: aarch64-unknown-linux-gnu
-       #   - os: windows-latest
-       #     name: windows_x86_64
-       #     target: x86_64-pc-windows-msvc
     steps:
     - name: checkout code
       uses: actions/checkout@v3
     - name: Download the file
       uses: suisei-cn/actions-download-file@v1.3.0
-      id: downloadfile  # Remember to give an ID if you need the output filename
+      id: downloadfile 
       with:
         url: "https://cache.ruby-lang.org/pub/ruby/${{env.SHORT_VERSION}}/ruby-${{env.VERSION}}.tar.gz"
         target: download
