--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -1,4 +1,4 @@
-name: M1 Mac Compile
+name: Aarch64 Linux Compile
 
 
   
@@ -33,6 +33,12 @@ jobs:
             compiler: clang -arch arm64
             cppcompiler: clang++ -arch arm64
             build: x86_64-apple-darwin
+          - os: ubuntu-latest
+           name: linux_aarch64
+           target: aarch64-unknown-linux-gnu
+           compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
+           cppcompiler: /usr/bin/aarch64-linux-gnu-g++ -DPAGE_SIZE=16384
+           build: x86_64-unknown-linux-gnu
 
     steps:
     - name: checkout code
@@ -41,14 +47,32 @@ jobs:
       id: openssl
       uses: suisei-cn/actions-download-file@v1.3.0
       with:
-        url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
+        url: "https://github.com/madler/zlib/releases/download/v1.3/zlib-1.3.tar.gz"
         target: openssl
+      - name: Download zlib
+      id: zlib
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
+        target: zlib
     - name: Download the ruby
       uses: suisei-cn/actions-download-file@v1.3.0
       id: downloadfile
       with:
         url: "https://cache.ruby-lang.org/pub/ruby/${{env.SHORT_VERSION}}/ruby-${{env.VERSION}}.tar.gz"
         target: download
+    - name: get compiler for aarch64 linux
+      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
+    - name: configure and build zlib
+      run: |
+        cd zlib
+        ls
+        tar -xvf zlib-1.3.tar.gz
+        cd zlib-1.3
+        mkdir build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"
+        make
+        make install
     - name: configure and build openssl
       run: |
         cd openssl
@@ -57,7 +81,7 @@ jobs:
         cd openssl-3.2.0
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/libraries" darwin64-arm64-cc no-shared
+        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/libraries" linux-aarch64 no-shared
         make
         make install
     - name: configure ruby build
