--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -72,6 +72,7 @@ jobs:
         tar -xvf zlib-1.3.tar.gz
         cd zlib-1.3
         mkdir build
+        cd build
         CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"
         make
         make install
