--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -51,12 +51,21 @@ jobs:
       with:
         url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
         target: openssl
+
+    - name: Download readline
+      id: readline
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://ftp.gnu.org/gnu/readline/readline-8.2.tar.gz"
+        target: readline
+
     - name: Download zlib
       id: zlib
       uses: suisei-cn/actions-download-file@v1.3.0
       with:
         url: "https://github.com/madler/zlib/releases/download/v1.3/zlib-1.3.tar.gz"
         target: zlib
+
     - name: Download the ruby
       uses: suisei-cn/actions-download-file@v1.3.0
       id: downloadfile
@@ -65,6 +74,7 @@ jobs:
         target: download
     - name: get compiler for aarch64 linux
       run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
+    
     - name: configure and build zlib
       run: |
         cd zlib
@@ -76,6 +86,19 @@ jobs:
         CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"
         make
         make install
+    
+    - name: configure and build readline
+      run: |
+        cd readline
+        ls
+        tar -xvf readline-8.2.tar.gz
+        cd readline-8.2
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"
+        make
+        make install
+
     - name: configure and build openssl
       run: |
         cd openssl
