--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -52,6 +52,13 @@ jobs:
         url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
         target: openssl
 
+    - name: Download libffi
+      id: readline
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/libffi/libffi/releases/download/v3.4.4/libffi-3.4.4.tar.gz"
+        target: libffi
+
     - name: Download readline
       id: readline
       uses: suisei-cn/actions-download-file@v1.3.0
@@ -74,7 +81,19 @@ jobs:
         target: download
     - name: get compiler for aarch64 linux
       run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
-    
+
+    - name: configure and build libffi
+      run: |
+        cd libffi
+        ls
+        tar -xvf libffi-3.4.4.tar.gz
+        cd libffi-3.4.4
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        make
+        make install
+
     - name: configure and build zlib
       run: |
         cd zlib
@@ -83,7 +102,7 @@ jobs:
         cd zlib-1.3
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries" --static
         make
         make install
     
@@ -95,9 +114,9 @@ jobs:
         cd readline-8.2
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
-        make CC='${{matrix.compiler}}' 
-        make install CC='${{matrix.compiler}}' 
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-static --disable-shared
+        make
+        make install
 
     - name: configure and build openssl
       run: |
