--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -122,7 +122,7 @@ jobs:
 
     - name: configure and build libyaml
       run: |
-        cd yaml
+        cd libyaml
         ls
         tar -xvf yaml-0.2.5.tar.gz
         cd yaml-0.2.5
