--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -1,31 +1,19 @@
 name: Aarch64 Linux Compile
 
-#temporary
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: 
+  workflow_dispatch:
+    inputs:
+      VERSION:
+        required: true
+        type: string
+      SHORT_VERSION:
+        required: true
+        type: string
+
 env:
   CARGO_TERM_COLOR: always
-  VERSION: "3.2.2"
-  SHORT_VERSION: "3.2"
-
-#will eventually use this to kick off
-# on: 
-#   workflow_dispatch:
-#     inputs:
-#       VERSION:
-#         required: true
-#         type: string
-#       SHORT_VERSION:
-#         required: true
-#         type: string
-
-# env:
-#   CARGO_TERM_COLOR: always
-#   VERSION: ${{inputs.VERSION}}
-#   SHORT_VERSION: ${{inputs.SHORT_VERSION}}
+  VERSION: ${{inputs.VERSION}}
+  SHORT_VERSION: ${{inputs.SHORT_VERSION}}
 
 jobs:
   build:
