--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,20 +1,11 @@
 name: Compile
 
-#don't actually call this, just make it quiet
-on: 
-  workflow_dispatch:
-    inputs:
-      VERSION:
-        required: true
-        type: string
-      SHORT_VERSION:
-        required: true
-        type: string
-# on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -40,12 +31,6 @@ jobs:
             target: x86_64-unknown-linux-gnu
             compiler: gcc
             build: x86_64-unknown-linux-gnu
-          #- os: ubuntu-latest
-          #  name: linux_aarch64
-          #  conan_target: aarch64linuxprofile
-          #  target: aarch64-unknown-linux-gnu
-          #  compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
-          #  build: x86_64-unknown-linux-gnu
     steps:
     - name: checkout code
       uses: actions/checkout@v3
@@ -89,7 +74,10 @@ jobs:
         title: "${{env.VERSION}}-${{matrix.name}}"
         files: |
           build/ruby.tar.gz
-    - name: kick off cross compilation
+    - name: kick off arm64 mac cross compilation
       if: ${{'x86_64-apple-darwin' == matrix.target}}
       run: gh workflow run m1maccompile.yml -f VERSION=${{env.VERSION}} -f SHORT_VERSION=${{env.SHORT_VERSION}}
+    - name: kick off aarch64 linux cross compilation
+      if: ${{'x86_64-unknown-linux-gnu' == matrix.target}}
+      run: gh workflow run aarch64linuxcompile.yml -f VERSION=${{env.VERSION}} -f SHORT_VERSION=${{env.SHORT_VERSION}}
           
