--- a/.github/workflows/aarch64linuxcompile.yml
+++ b/.github/workflows/aarch64linuxcompile.yml
@@ -29,6 +29,7 @@ jobs:
           compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
           cppcompiler: /usr/bin/aarch64-linux-gnu-g++ -DPAGE_SIZE=16384
           build: x86_64-unknown-linux-gnu
+          openssltarget: linux-aarch64
 
     steps:
     - name: checkout code
@@ -92,7 +93,7 @@ jobs:
         cd ncurses-6.4
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" CPPFLAGS="-P -fPIC"  ../configure --prefix="${{github.workspace}}/libraries" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --without-cxx-binding --without-shared --disable-stripping
+        CC='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" CPPFLAGS="-P -fPIC"  ../configure --prefix="${{github.workspace}}/bin" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --without-cxx-binding --without-shared --disable-stripping
         make
         make install
 
@@ -104,7 +105,7 @@ jobs:
         cd libffi-3.4.4
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
         make
         make install
 
@@ -116,7 +117,7 @@ jobs:
         cd yaml-0.2.5
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
         make
         make install
 
@@ -128,7 +129,7 @@ jobs:
         cd zlib-1.3
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/libraries" --static
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --static
         make
         make install
     
@@ -140,7 +141,7 @@ jobs:
         cd readline-8.2
         mkdir build
         cd build
-        CC='${{matrix.compiler}}'  CFLAGS="-I${{github.workspace}}/libraries/include -fPIC" LDFLAGS="-L${{github.workspace}}/libraries/lib" ../configure --prefix="${{github.workspace}}/libraries"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-static --disable-shared
+        CC='${{matrix.compiler}}'  CFLAGS="-I${{github.workspace}}/bin/include -fPIC" LDFLAGS="-L${{github.workspace}}/bin/lib" ../configure --prefix="${{github.workspace}}/bin"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-static --disable-shared
         make
         make install
 
@@ -152,7 +153,7 @@ jobs:
         cd openssl-3.2.0
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/libraries" linux-aarch64 no-shared
+        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/bin" ${{matrix.openssltarget}} no-shared
         make
         make install
     - name: configure ruby build
@@ -168,7 +169,7 @@ jobs:
         cp solipath build
         cd build
         echo '[{"name": "ruby", "version": "${{env.VERSION}}"}]' > solipath.json
-        ./solipath ../ruby-${{env.VERSION}}/configure CFLAGS="-I${{github.workspace}}/libraries/include -fPIC" LDFLAGS="-L${{github.workspace}}/libraries/lib" CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin"
+        ./solipath ../ruby-${{env.VERSION}}/configure CFLAGS="-I${{github.workspace}}/bin/include -fPIC" LDFLAGS="-L${{github.workspace}}/bin/lib" CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="${{github.workspace}}/bin"
     - name: compile ruby
       run: |
         cd build
@@ -179,6 +180,8 @@ jobs:
         MINIRUBY="$BASERUBY" && ./solipath make V=1 CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}"
         echo "start install"
         MINIRUBY="$BASERUBY" && ./solipath make install CC='${{matrix.compiler}}' LD='${{matrix.compiler}}'
+    - name: compress ruby
+      run: |
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -188,5 +191,5 @@ jobs:
         prerelease: false
         title: "${{env.VERSION}}-${{matrix.name}}"
         files: |
-          build/ruby.tar.gz
+          ruby.tar.gz
           
