--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -26,23 +26,144 @@ jobs:
             target: x86_64-apple-darwin
             compiler: clang
             build: x86_64-apple-darwin
+            compiler: clang
+            cppcompiler: clang++
+            openssltarget: darwin64-x86_64
           - os: ubuntu-latest
             name: linux_x86_64
             target: x86_64-unknown-linux-gnu
             compiler: gcc
             build: x86_64-unknown-linux-gnu
+            compiler: gcc
+            cppcompiler: g++
+            openssltarget: linux-x86_64
+
+
     steps:
     - name: checkout code
       uses: actions/checkout@v3
-    - name: Download the file
+    - name: Download openssl
+      id: openssl
       uses: suisei-cn/actions-download-file@v1.3.0
-      id: downloadfile 
+      with:
+        url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
+        target: openssl
+
+    - name: Download ncurses
+      id: ncurses
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://ftp.gnu.org/gnu/ncurses/ncurses-6.4.tar.gz"
+        target: ncurses
+
+    - name: Download libffi
+      id: libffi
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/libffi/libffi/releases/download/v3.4.4/libffi-3.4.4.tar.gz"
+        target: libffi
+
+    - name: Download readline
+      id: readline
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://ftp.gnu.org/gnu/readline/readline-8.2.tar.gz"
+        target: readline
+
+    - name: Download zlib
+      id: zlib
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/madler/zlib/releases/download/v1.3/zlib-1.3.tar.gz"
+        target: zlib
+
+    - name: Download libyaml
+      id: libyaml
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/yaml/libyaml/releases/download/0.2.5/yaml-0.2.5.tar.gz"
+        target: libyaml
+
+    - name: Download the ruby
+      uses: suisei-cn/actions-download-file@v1.3.0
+      id: downloadfile
       with:
         url: "https://cache.ruby-lang.org/pub/ruby/${{env.SHORT_VERSION}}/ruby-${{env.VERSION}}.tar.gz"
         target: download
     - name: get compiler for aarch64 linux
-      if: ${{'aarch64-unknown-linux-gnu' == matrix.target}}
-      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu zlib1g-dev
+      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
+
+    - name: configure and build ncurses
+      run: |
+        cd ncurses
+        ls
+        tar -xvf ncurses-6.4.tar.gz
+        cd ncurses-6.4
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" CPPFLAGS="-P -fPIC"  ../configure --prefix="${{github.workspace}}/bin" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --without-cxx-binding --without-shared --disable-stripping
+        make
+        make install
+
+    - name: configure and build libffi
+      run: |
+        cd libffi
+        ls
+        tar -xvf libffi-3.4.4.tar.gz
+        cd libffi-3.4.4
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        make
+        make install
+
+    - name: configure and build libyaml
+      run: |
+        cd libyaml
+        ls
+        tar -xvf yaml-0.2.5.tar.gz
+        cd yaml-0.2.5
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        make
+        make install
+
+    - name: configure and build zlib
+      run: |
+        cd zlib
+        ls
+        tar -xvf zlib-1.3.tar.gz
+        cd zlib-1.3
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --static
+        make
+        make install
+    
+    - name: configure and build readline
+      run: |
+        cd readline
+        ls
+        tar -xvf readline-8.2.tar.gz
+        cd readline-8.2
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}'  CFLAGS="-I${{github.workspace}}/bin/include -fPIC" LDFLAGS="-L${{github.workspace}}/bin/lib" ../configure --prefix="${{github.workspace}}/bin"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-static --disable-shared
+        make
+        make install
+
+    - name: configure and build openssl
+      run: |
+        cd openssl
+        ls
+        tar -xvf openssl-3.2.0.tar.gz
+        cd openssl-3.2.0
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/bin" ${{matrix.openssltarget}} no-shared
+        make
+        make install
     - name: configure ruby build
       run: |
         uname -m
@@ -54,7 +175,8 @@ jobs:
         cd ..
         mkdir build
         cd build
-        ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin"
+        echo '[{"name": "ruby", "version": "${{env.VERSION}}"}]' > solipath.json
+        ../ruby-${{env.VERSION}}/configure CFLAGS="-I${{github.workspace}}/bin/include -fPIC" LDFLAGS="-L${{github.workspace}}/bin/lib" CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="${{github.workspace}}/bin"
     - name: compile ruby
       run: |
         cd build
@@ -62,7 +184,11 @@ jobs:
         echo "Print Makefile:"
         cat Makefile
         echo "start build"
-        make CC='${{matrix.compiler}}' && make install
+        make V=1 CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}"
+        echo "start install"
+        make install CC='${{matrix.compiler}}' LD='${{matrix.compiler}}'
+    - name: compress ruby
+      run: |
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -72,7 +198,9 @@ jobs:
         prerelease: false
         title: "${{env.VERSION}}-${{matrix.name}}"
         files: |
-          build/ruby.tar.gz
+          ruby.tar.gz
+          
+
     - name: kick off arm64 mac cross compilation
       if: ${{'x86_64-apple-darwin' == matrix.target}}
       run: gh workflow run m1maccompile.yml -f VERSION=${{env.VERSION}} -f SHORT_VERSION=${{env.SHORT_VERSION}}
