--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -34,24 +34,81 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v3
-    - name: Download libyaml
-      id: libyaml
-      uses: suisei-cn/actions-download-file@v1.3.0
-      with:
-        url: "https://github.com/yaml/libyaml/releases/download/0.2.5/yaml-0.2.5.tar.gz"
-        target: libyaml
     - name: Download openssl
       id: openssl
       uses: suisei-cn/actions-download-file@v1.3.0
       with:
         url: "https://github.com/openssl/openssl/releases/download/openssl-3.2.0/openssl-3.2.0.tar.gz"
         target: openssl
+
+    - name: Download ncurses
+      id: ncurses
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://ftp.gnu.org/gnu/ncurses/ncurses-6.4.tar.gz"
+        target: ncurses
+
+    - name: Download libffi
+      id: libffi
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/libffi/libffi/releases/download/v3.4.4/libffi-3.4.4.tar.gz"
+        target: libffi
+
+    - name: Download readline
+      id: readline
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://ftp.gnu.org/gnu/readline/readline-8.2.tar.gz"
+        target: readline
+
+    - name: Download zlib
+      id: zlib
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/madler/zlib/releases/download/v1.3/zlib-1.3.tar.gz"
+        target: zlib
+
+    - name: Download libyaml
+      id: libyaml
+      uses: suisei-cn/actions-download-file@v1.3.0
+      with:
+        url: "https://github.com/yaml/libyaml/releases/download/0.2.5/yaml-0.2.5.tar.gz"
+        target: libyaml
+
     - name: Download the ruby
       uses: suisei-cn/actions-download-file@v1.3.0
       id: downloadfile
       with:
         url: "https://cache.ruby-lang.org/pub/ruby/${{env.SHORT_VERSION}}/ruby-${{env.VERSION}}.tar.gz"
         target: download
+    - name: get compiler for aarch64 linux
+      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
+
+    - name: configure and build ncurses
+      run: |
+        cd ncurses
+        ls
+        tar -xvf ncurses-6.4.tar.gz
+        cd ncurses-6.4
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" CPPFLAGS="-P -fPIC"  ../configure --prefix="${{github.workspace}}/bin" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --without-cxx-binding --without-shared --disable-stripping
+        make
+        make install
+
+    - name: configure and build libffi
+      run: |
+        cd libffi
+        ls
+        tar -xvf libffi-3.4.4.tar.gz
+        cd libffi-3.4.4
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
+        make
+        make install
+
     - name: configure and build libyaml
       run: |
         cd libyaml
@@ -63,6 +120,31 @@ jobs:
         CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --enable-static --disable-shared --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}}
         make
         make install
+
+    - name: configure and build zlib
+      run: |
+        cd zlib
+        ls
+        tar -xvf zlib-1.3.tar.gz
+        cd zlib-1.3
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --static
+        make
+        make install
+    
+    - name: configure and build readline
+      run: |
+        cd readline
+        ls
+        tar -xvf readline-8.2.tar.gz
+        cd readline-8.2
+        mkdir build
+        cd build
+        CC='${{matrix.compiler}}'  CFLAGS="-I${{github.workspace}}/bin/include -fPIC" LDFLAGS="-L${{github.workspace}}/bin/lib" ../configure --prefix="${{github.workspace}}/bin"  --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-static --disable-shared
+        make
+        make install
+
     - name: configure and build openssl
       run: |
         cd openssl
