added fPIC to zlib

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -132,7 +132,7 @@ jobs:
         cd zlib-1.3
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../configure --prefix="${{github.workspace}}/bin" --static
+        CC='${{matrix.compiler}}' CFLAGS="-fPIC" ../configure --prefix="${{github.workspace}}/bin" --static
         make
         make install
     
