--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -147,7 +147,7 @@ jobs:
         mkdir build
         cp solipath build
         cd build
-        echo '[{"name": "ruby", "version": "${{env.VERSION}}"}]' > solipath.json
+        echo '[{"name": "ruby", "version": "${{env.SHORT_VERSION}}"}]' > solipath.json
         ./solipath ../ruby-${{env.VERSION}}/configure CFLAGS="-I${{github.workspace}}/bin/include" LDFLAGS="-L${{github.workspace}}/bin/lib" CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}" --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="${{github.workspace}}/bin"
     - name: compile ruby
       run: |
