--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -25,6 +25,7 @@ jobs:
             name: macos_x86_64
             target: x86_64-apple-darwin
             compiler: clang
+            linker: clang
             build: x86_64-apple-darwin
             cppcompiler: clang++
             openssltarget: darwin64-x86_64
@@ -32,6 +33,7 @@ jobs:
             name: linux_x86_64
             target: x86_64-unknown-linux-gnu
             compiler: gcc
+            linker: ld
             build: x86_64-unknown-linux-gnu
             cppcompiler: g++
             openssltarget: linux-x86_64
@@ -179,9 +181,9 @@ jobs:
         echo "Print Makefile:"
         cat Makefile
         echo "start build"
-        make V=1 CC='${{matrix.compiler}}' LD='${{matrix.compiler}}' CXX="${{matrix.cppcompiler}}"
+        make V=1 CC='${{matrix.compiler}}' LD='${{matrix.linker}}' CXX="${{matrix.cppcompiler}}"
         echo "start install"
-        make install CC='${{matrix.compiler}}' LD='${{matrix.compiler}}'
+        make install CC='${{matrix.compiler}}' LD='${{matrix.linker}}'
     - name: compress ruby
       run: |
         tar -czvf ruby.tar.gz bin
